--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Inter';
     src: url(./fonts/Inter_Web/Inter-Black.woff2) format('woff2'),
-    src: url(./fonts/Inter_Web/Inter-Black.woff) format('woff');
+         url(./fonts/Inter_Web/Inter-Black.woff) format('woff');
 }
 @font-face {
     font-family: 'Inter';
@@ -26,10 +26,6 @@
     font-style: normal;
     max-width: 1280px;
     margin: 0 auto 0;
-}
-@media screen and (max-width: 1024px) {
-} 
-@media screen and (max-width: 768px) {
 }
 @media screen and (max-width: 328px) {
     .page{
