--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,11 +1,9 @@
 .cover__subtitle{
-    max-width: 360px;
-    min-height: 66px;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     text-align: center;
-    margin: 32px auto 0;
+    color: #FFFFFF;
 }
 @media screen and (max-width: 1024px) {
 } 
@@ -14,7 +12,6 @@
 @media screen and (max-width: 425px) {
     .cover__subtitle{
         max-width: 288px;
-        min-height: 48px;
         font-size: 14px;
         line-height: 16px;
         margin: 16px auto 0;
