--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,10 +1,9 @@
 .cover__title{
-    max-width: 560px;
-    min-height: 152px;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
     text-align: center;
+    color: #FFFFFF;
     margin: 0;
 }
 @media screen and (max-width: 1024px) {
@@ -14,7 +13,6 @@
 @media screen and (max-width: 425px) {
     .cover__title{
         max-width: 288px;
-        min-height: 70px;
         font-size: 32px;
         line-height: 35px;
     }
