--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,26 +1,35 @@
-.cover{
+/* .cover{
     max-width: 1184px;
     min-height: 740px;
     margin: 92px auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-image: url(../../images/cover-trains.jpg);
-    background-size: cover;
-}
-@media screen and (max-width: 1024px) {
 } 
 @media screen and (max-width: 768px) {
     .cover {
         max-width: 768px;
-        min-height: 480px;
+        /* min-height: 480px;
     }
 }
 @media screen and (max-width: 425px) {
     .cover{
         max-width: 320px;
-        min-height: 200px;
         margin: 66px auto 64px;
     }
+} */
+.cover{
+    background-image: url(../../images/cover-trains.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 92px auto;
+    max-width: 1184px;
+}
+@media screen and (max-width: 768px) {
+    .cover{
+        margin: 90px auto 88px;
+    }   
+}
+@media screen and (max-width: 425px) {
+    .cover{
+        margin: 66px auto 64px;
+    }   
 }
