--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,6 +6,12 @@
     font-size: 16px;
     margin-right: 18px;
 }
+.footer__link:last-child{
+    margin-right: 0;
+}
+.footer__link:hover{
+    opacity: 0.8;
+}
 @media screen and (max-width: 1024px) {
 } 
 @media screen and (max-width: 710px) {
