--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,6 +1,5 @@
 .intro__list {
     max-width: 690px;
-    min-height: 90px;
     font-weight: 400;
     font-size: 12px;
     line-height: 18px;
@@ -14,7 +13,7 @@
 }
 @media screen and (max-width: 425px) {
     .intro__list {
-        width: 288px;
+        max-width: 288px;
         font-weight: 400;
         font-size: 12px;
         line-height: 18px;
