--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,5 @@
 .intro{
-    width: 690px;
-    height: 429px;
+    max-width: 690px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -14,21 +13,18 @@
 @media screen and (max-width: 768px) {
     .intro{
         max-width: 720px;
-        min-height: 429px;
         margin: 88px 24px;
     }
 }
 @media screen and (max-width: 710px) {
     .intro{
         max-width: 425px;
-        min-height: 754px;
         margin: 64px 16px;
     }
 }
 @media screen and (max-width: 425px) {
     .intro{
         max-width: 288px;
-        min-height: 754px;
         margin: 64px 16px;
     }
 }
