--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,13 +1,14 @@
 .place__link{
     max-width: 456px;
-    min-height: 22px;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     text-decoration: underline;
     color: #FFFFFF;
 }
-
+.place__link:hover{
+    opacity: 0.8;
+}
 @media screen and (max-width: 1024px) {
 } 
 @media screen and (max-width: 768px) {
