--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,20 +1,3 @@
-/* .cover{
-    max-width: 1184px;
-    min-height: 740px;
-    margin: 92px auto;
-} 
-@media screen and (max-width: 768px) {
-    .cover {
-        max-width: 768px;
-        /* min-height: 480px;
-    }
-}
-@media screen and (max-width: 425px) {
-    .cover{
-        max-width: 320px;
-        margin: 66px auto 64px;
-    }
-} */
 .cover{
     background-image: url(../../images/cover-trains.jpg);
     background-size: cover;
@@ -22,14 +5,29 @@
     background-repeat: no-repeat;
     margin: 92px auto;
     max-width: 1184px;
+    height: 740px;
+    display: flex;
+    align-items: center;
+   
+}
+@media screen and (max-width: 1024px) {
+    .cover{
+        width: 1024px;
+        height: 640px;
+        margin: 90px auto 88px;
+    }   
 }
 @media screen and (max-width: 768px) {
     .cover{
+        width: 768px;
+        height: 480px;
         margin: 90px auto 88px;
     }   
 }
 @media screen and (max-width: 425px) {
     .cover{
+        width: 320px;
+        height: 200px;
         margin: 66px auto 64px;
     }   
 }
