--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,4 @@
 .footer__copyright{
-    width: 186px;
     line-height: 16px;
     font-weight: 400;
     font-size: 14px;
@@ -10,5 +9,6 @@
     .footer__copyright{
         line-height: 14px;
         text-align: left;
+        margin-top: 16px; 
     }
 }
