--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,6 +7,9 @@
 @media screen and (max-width: 1024px) {
 } 
 @media screen and (max-width: 768px) {
+    .header{
+        margin: 28px 24px 0;
+    }
 }
 @media screen and (max-width: 425px) {
     .header {
