--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,4 @@
 .lead__caption {
-    min-width: 158px;
-    min-height: 14px;
     text-transform: uppercase;
     font-weight: 400;
     font-size: 10px;
@@ -12,6 +10,9 @@
 @media screen and (max-width: 1024px) {
 } 
 @media screen and (max-width: 768px) {
+    .lead__caption{
+        margin-left: 24px;
+    }
 }
 @media screen and (max-width: 425px) {
     .lead__caption{
