--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,6 +1,7 @@
 .lead__image {
     max-width: 984px;
     min-height: 615px;
+    /* width: 100%; */
 }
 @media screen and (max-width: 1024px) {
 } 
@@ -20,6 +21,5 @@
 @media screen and (max-width: 425px) {
     .lead__image {
         max-width: 320px;
-        min-height: 200px;
     }
 }
