--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -26,15 +26,9 @@
         justify-content: center;
     }
 }
-@media screen and (max-width: 710px) {
-    .photo-grid {
-        margin: 88px auto;
-        max-width: 720px;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(6, 1fr);
-        gap: 16px;
-    }
-}
+/* @media screen and (max-width: 710px) {
+    
+} */
 @media screen and (max-width: 425px) {
     .photo-grid {
         margin: 64px auto;
