--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -8,9 +8,8 @@
 } 
 @media screen and (max-width: 768px) {
     .place__image{
-        /* max-width: 340px;
-        height: 340px; */
-        /* width: 100%; */
+        max-width: 340px;
+        height: 340px;
     }
 }
 @media screen and (max-width: 425px) {
