--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,6 +4,8 @@
     line-height: 22px;
     text-align: center;
     color: #FFFFFF;
+    max-width: 360px;
+    margin: 32px auto 0;
 }
 @media screen and (max-width: 1024px) {
 } 
