--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -12,21 +12,21 @@
 }
 @media screen and (max-width: 1024px) {
     .cover{
-        width: 1024px;
+        max-width: 1024px;
         height: 640px;
         margin: 90px auto 88px;
     }   
 }
 @media screen and (max-width: 768px) {
     .cover{
-        width: 768px;
+        max-width: 768px;
         height: 480px;
         margin: 90px auto 88px;
     }   
 }
 @media screen and (max-width: 425px) {
     .cover{
-        width: 320px;
+        max-width: 320px;
         height: 200px;
         margin: 66px auto 64px;
     }   
