--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,6 +7,9 @@
     margin: 32px auto 64px;
 }
 @media screen and (max-width: 1024px) {
+    .lead__subtitle{
+        margin: 32px auto 56px;
+    }
 } 
 @media screen and (max-width: 768px) {
 }
