--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -5,6 +5,10 @@
 }
 
 @media screen and (max-width: 1024px) {
+    .place__image{
+        max-width: 440px;
+        height: 440px;
+    }
 } 
 @media screen and (max-width: 768px) {
     .place__image{
