--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -3,7 +3,6 @@
     padding: 245px 312px 245px;
     text-decoration: none;
     background: rgba(42, 44, 47, 0.3);
-    position: relative;
 }
 .cover__overlay:hover{
     background: rgba(42, 44, 47, 0.8);
@@ -18,6 +17,12 @@
     .cover__overlay{
         max-width: 768px;
         padding: 115px 104px 115px;
+    }
+}
+@media screen and (max-width: 569px) {
+    .cover__overlay{
+        max-width: 768px;
+        padding: 115px 20px 115px;
     }
 }
 @media screen and (max-width: 425px) {
