--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -24,6 +24,13 @@
         margin: 90px auto 88px;
     }   
 }
+/* @media screen and (max-width: 569px) {
+    .cover{
+        max-width: 320px;
+        height: 200px;
+        margin: 66px auto 64px;
+    }   
+} */
 @media screen and (max-width: 425px) {
     .cover{
         max-width: 320px;
