--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -17,6 +17,13 @@
         margin: 90px auto 88px;
     }   
 }
+@media screen and (max-width: 823px) {
+    .cover{
+        max-width: 768px;
+        height: 480px;
+        margin: 90px auto 88px;
+    }   
+}
 @media screen and (max-width: 768px) {
     .cover{
         max-width: 768px;
@@ -24,13 +31,6 @@
         margin: 90px auto 88px;
     }   
 }
-/* @media screen and (max-width: 569px) {
-    .cover{
-        max-width: 320px;
-        height: 200px;
-        margin: 66px auto 64px;
-    }   
-} */
 @media screen and (max-width: 425px) {
     .cover{
         max-width: 320px;
