--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     margin: 92px auto;
     max-width: 1184px;
-    height: 740px;
+    min-height: 740px;
     display: flex;
     align-items: center;
    
@@ -13,28 +13,28 @@
 @media screen and (max-width: 1024px) {
     .cover{
         max-width: 1024px;
-        height: 640px;
+        min-height: 640px;
         margin: 90px auto 88px;
     }   
 }
 @media screen and (max-width: 823px) {
     .cover{
         max-width: 768px;
-        height: 480px;
+        min-height: 480px;
         margin: 90px auto 88px;
     }   
 }
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
     .cover{
         max-width: 768px;
-        height: 480px;
+        min-height: 480px;
         margin: 90px auto 88px;
     }   
-}
+} */
 @media screen and (max-width: 425px) {
     .cover{
         max-width: 320px;
-        height: 200px;
+        min-height: 200px;
         margin: 66px auto 64px;
     }   
 }
